Add geo street data and endpoint to API
We will be providing autocomplete for streets based
on donors post codes. This adds a new endpoint for
looking it up and swaps our dataset to the larger
version that includes streets.

Ticket: https://phabricator.wikimedia.org/T369154

--- a/config/api-routes.yaml
+++ b/config/api-routes.yaml
@@ -3,6 +3,11 @@ api_cities.json:
     methods: [POST]
     controller: 'WMDE\Fundraising\Frontend\App\Controllers\Validation\FindCitiesController::index'
 
+api_streets.json:
+    path: /api/v1/streets.json
+    methods: [POST]
+    controller: 'WMDE\Fundraising\Frontend\App\Controllers\Validation\FindStreetsController::index'
+
 api_address_change_get:
     path: /api/v1/address_change/{identifier}/{previousIdentifier}
     methods: [GET]
