--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,6 +50,7 @@ services:
     networks:
       - default
       - frontend-proxy
+    command: --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
 
   mailhog:
     image: mailhog/mailhog
