--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,7 @@
 		"symfony/mailer": "~7.0",
 		"symfony/monolog-bundle": "^3.8",
 		"symfony/property-access": "~7.0",
+		"symfony/serializer-pack": "~v1.3.0",
 		"symfony/twig-bridge": "~7.0",
 		"symfony/validator": "~7.0",
 		"symfony/yaml": "~7.0",
