Rename files to be both neutral and descriptive
- Keep the old/ deprecated entries to make the production deployment smooth
- https://github.com/wmde/fundraising-frontend-content/pull/272

Ticket: https://phabricator.wikimedia.org/T379726

--- a/app/config/config.dist.json
+++ b/app/config/config.dist.json
@@ -45,12 +45,12 @@
 	},
 	"text-policies": {
 		"fields": {
-			"whitewords": "",
-			"badwords": ""
+			"allowed-terms": "",
+			"banned-terms": ""
 		},
 		"comment": {
-			"whitewords": "",
-			"badwords": ""
+			"allowed-terms": "",
+			"banned-terms": ""
 		}
 	},
 	"email-address-blacklist": [],
