--- a/app/config/campaigns.dev.yml
+++ b/app/config/campaigns.dev.yml
@@ -1,11 +1,10 @@
 # This file is used in the "dev" and "uat" environments to be able to test future and past campaigns
 campaigns:
 
-  address_type_steps:
+  address_type_choice:
     active: true
-    start: "2022-11-01"
-    end: "2023-12-31"
-    default_bucket: "direct"
+    start: "2024-11-21"
+    end: "2024-12-31"
 
   membership_intervals:
     start: "2023-01-05"
