--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -32,6 +32,7 @@
     <include>
       <directory suffix=".php">src</directory>
       <directory suffix=".php">app</directory>
+      <directory suffix=".php">cli</directory>
     </include>
   </source>
 </phpunit>
