Add pattern library route
The pattern library will be available on the production
site so this adds a route for it to be viewed on.

Ticket: https://phabricator.wikimedia.org/T395100

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -168,6 +168,12 @@ index:
     # controller: 'WMDE\Fundraising\Frontend\App\Controllers\TestController::index'
     controller: 'WMDE\Fundraising\Frontend\App\Controllers\Donation\NewDonationController::index'
 
+pattern_library:
+    path: /pattern-library/{pattern}
+    methods: [ GET ]
+    controller: 'WMDE\Fundraising\Frontend\App\Controllers\StaticContent\ShowPatternLibraryController::index'
+    defaults:
+        pattern: index
 
 # Redirect links to the old donation app to the start page
 legacy_routes.php:
