Change dependabot update strategy
- make dependabot group minor updates
- make dependabot look for patch updates only monthly

https://phabricator.wikimedia.org/T393571

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,9 +5,34 @@ version: 2
 updates:
   - package-ecosystem: "composer" # See documentation for possible values
     directory: "/" # Location of package manifests
+
+    # this line is needed as a workaround to have two groups of updates for the same
+    # package ecosystem. See https://github.com/dependabot/dependabot-core/issues/1778
+    # for the feature request to have a dependabot group for each semver type
+    target-branch: main
+
     schedule:
       interval: "daily"
+    groups:
+      minor-version-updates:
+        update-types:
+          - minor
+    ignore:
+      -   dependency-name: "*"
+          update-types:
+            - "version-update:semver-patch"
+
+  - package-ecosystem: "composer" # See documentation for possible values
+    directory: "/" # Location of package manifests
+    schedule:
+      interval: "monthly"
+      day: "tuesday"
     groups:
       patch-updates:
         update-types:
           - patch
+    ignore:
+      -   dependency-name: "*"
+          update-types:
+            - "version-update:semver-minor"
+            - "version-update:semver-major"
