Rename HTTP endpoint to `donation-was-approved`
- this should help understanding that this endpoint is used when a moderated donation got approved in the FOC
https://phabricator.wikimedia.org/T390840

- Rename every occurence of "donation accepted" to "donation approved"
- this should help understanding that this endpoint is used when a moderated donation got approved in the FOC
https://phabricator.wikimedia.org/T390840

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -157,10 +157,10 @@ handle_creditcard_payment_notification:
     methods: [GET]
     controller: 'WMDE\Fundraising\Frontend\App\Controllers\Payment\CreditCardPaymentNotificationController::index'
 
-donation_accepted:
-    path: /donation-accepted
+donation_was_approved:
+    path: /donation-was-approved
     methods: [GET]
-    controller: 'WMDE\Fundraising\Frontend\App\Controllers\Donation\DonationAcceptedController::index'
+    controller: 'WMDE\Fundraising\Frontend\App\Controllers\Donation\DonationApprovedController::index'
 
 index:
     path: /
