Add route to show membership fee upgrade form
- also adds controller to show the fee upgrade form
- and a twig template to render the values in the frontend

https://phabricator.wikimedia.org/T395016

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -132,6 +132,11 @@ show_membership_confirmation:
     methods: [GET]
     controller: 'WMDE\Fundraising\Frontend\App\Controllers\Membership\ShowMembershipConfirmationController::index'
 
+show_membership_fee_upgrade_form:
+    path: /show-membership-fee-upgrade
+    methods: [ GET ]
+    controller: 'WMDE\Fundraising\Frontend\App\Controllers\Membership\ShowMembershipFeeUpgradeController::index'
+
 show_donation_confirmation:
     path: /show-donation-confirmation
     methods: [GET, POST]
