--- a/composer.json
+++ b/composer.json
@@ -123,7 +123,7 @@
 
 		"wmde/psr-log-test-doubles": "~3.0",
 		"wmde/fundraising-phpcs": "~12.0",
-		"wmde/fundraising-frontend-content": "dev-test",
+		"wmde/fundraising-frontend-content": "dev-membership-summary",
 
 		"symfony/css-selector": "^7.0",
 		"symfony/browser-kit": "^7.0"
