Use Content-Security-Policy header
Content-Security-Policy disallows arbitrary inline scripts, so we put
the "loader" script for Matomo into a separate JavaScript file, putting
the parameters into data attributes.
See:
- https://matomo.org/faq/general/faq_20904/
- https://developer.mozilla.org/en-US/docs/Web/HTTP/Reference/Headers/Content-Security-Policy

Change the default configuration to request the tracking script via
HTTPS - the server will redirect HTTP requests anyway.
Adapt the JSON schema to allow both the old format with double slashes
and the new one with http/https

Ticket: https://phabricator.wikimedia.org/T137212

--- a/app/config/config.dist.json
+++ b/app/config/config.dist.json
@@ -104,7 +104,7 @@
 		"notification-url": ""
 	},
 	"piwik": {
-		"baseUrl": "//tracking.wikimedia.de/",
+		"baseUrl": "https://tracking.wikimedia.de/",
 		"siteId": 5,
 		"donationConfirmationGoalId": 1,
 		"membershipApplicationConfirmationGoalId": 2
