Move POST controller to API context
- we want the POST controller and the POST route in the API directory
and use the file `api-routes.yaml` instead of `routes.yaml` for it

https://phabricator.wikimedia.org/T395016

--- a/config/api-routes.yaml
+++ b/config/api-routes.yaml
@@ -29,3 +29,8 @@ api_donation_comment_post:
     path: /api/v1/donation/comment
     methods: [PUT,POST]
     controller: 'WMDE\Fundraising\Frontend\App\Controllers\API\Donation\AddCommentController::index'
+
+api_membership_fee_change:
+    path: /api/v1/membership/change-fee
+    methods: [ POST ]
+    controller: 'WMDE\Fundraising\Frontend\App\Controllers\Membership\UpgradeMembershipFeeController::index'
