Implement POST route
- use `#[MapRequestPayload] FeeChangeRequest $feeChangeRequest` to make parsing request data into a DTO easier
- return JSON in success and error case, give error reasons
- fix tests and test setups

- make tests support new field "memberName"

https://phabricator.wikimedia.org/T395016

--- a/config/api-routes.yaml
+++ b/config/api-routes.yaml
@@ -33,4 +33,4 @@ api_donation_comment_post:
 api_membership_fee_change:
     path: /api/v1/membership/change-fee
     methods: [ POST ]
-    controller: 'WMDE\Fundraising\Frontend\App\Controllers\Membership\UpgradeMembershipFeeController::index'
+    controller: 'WMDE\Fundraising\Frontend\App\Controllers\API\Membership\UpgradeMembershipFeeController::index'
