Output API endpoint route
- Adds the fee upgrade endpoint to the named route urls
- Updates the default data to make it closer to real world
- Makes the API entry point accept a PUT request

Ticket: https://phabricator.wikimedia.org/T395016

--- a/config/api-routes.yaml
+++ b/config/api-routes.yaml
@@ -32,5 +32,5 @@ api_donation_comment_post:
 
 api_membership_fee_change:
     path: /api/v1/membership/change-fee
-    methods: [ POST ]
+    methods: [PUT]
     controller: 'WMDE\Fundraising\Frontend\App\Controllers\API\Membership\UpgradeMembershipFeeController::index'
