--- a/app/config/archived_campaigns.yaml
+++ b/app/config/archived_campaigns.yaml
@@ -200,3 +200,16 @@ new_design:
   url_key: des
   active: true
   param_only: true
+
+address_type_choice:
+  description: Test offering an "anonymous" choice (coming from a banner where the user donated less than 10 EUR)
+  reference: "https://phabricator.wikimedia.org/T380462"
+  start: "2024-11-25"
+  end: "2024-12-31"
+  buckets:
+    - "default"
+    - "choice"
+  default_bucket: "default"
+  url_key: xf
+  active: true
+  param_only: true
