Add member fee upgrade active flag
This adds a new flag to the config to let us turn
the fee upgrade module on and off.

Implement the new method in the
MembershipFeeChangeHTMLPresenter.php

Add tests

Bug: T415775

--- a/app/config/config.dist.json
+++ b/app/config/config.dist.json
@@ -144,5 +144,6 @@
 	"campaigns": {
 		"timezone":  "Europe/Berlin",
 		"configurations": [ "campaigns.yml" ]
-	}
+	},
+	"membership-fee-change-active": true
 }
